# RecipeManager

./: .gitignore
src/: CMakeLists.txt  FileManager.c  FileManager.h  Readme.md  Utilities.c  Utilities.h  config  database.txt  main.c
src/Types/: Ingredient.c  Ingredient.h  MeasurementUnits.h  Recipe.c  Recipe.h
